# prompt-agent

./: .gitignore  README.md  pyproject.toml
src/prompt_agent/: __init__.py  __main__.py  cli.py
src/prompt_agent/commands/: chat.py  diagnose.py  edit.py  eval.py  library.py  new.py  show.py  version.py
src/prompt_agent/core/: client.py  config.py  meta_prompt.py
src/prompt_agent/evaluators/: llm_judge.py  rule.py  schema.py
src/prompt_agent/memory/: __init__.py  context.py  eval_history.py  preferences.py  store.py
src/prompt_agent/seed/: __init__.py
src/prompt_agent/seed/classifier/: suite.yaml  v1.md
src/prompt_agent/seed/doc-summarizer/: suite.yaml  v1.md
src/prompt_agent/seed/react-coder/: suite.yaml  v1.md
src/prompt_agent/seed/safety-guard/: suite.yaml  v1.md
src/prompt_agent/seed/sql-generator/: suite.yaml  v1.md
src/prompt_agent/seed/tool-router/: suite.yaml  v1.md
src/prompt_agent/storage/: library.py
tests/: conftest.py  test_chat.py  test_config.py  test_fix_quotes.py  test_library.py  test_memory.py  test_meta_prompt.py  test_rule.py  test_schema.py
