[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-agent"
version = "0.2.0"
description = "CLI agent that helps agent developers design, test, and manage system prompts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "prompt-agent contributors" }]
dependencies = [
    "typer>=0.12",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-frontmatter>=1.1",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "json-repair>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
pa = "prompt_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_agent"]

[tool.hatch.build.targets.sdist]
include = ["src/prompt_agent", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]